k8s/overlays/stag/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: execution-service
spec:
  rules:
    - host: execution-service-stag
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: execution-service
                port:
                  name: http
